fixed nutmeg spreads sizing on mobile. cleaned up all this code on desktop too to use bootstrap grid

--- a/assets/css/bundle.css
+++ b/assets/css/bundle.css
@@ -13001,12 +13001,6 @@ img.slide-image {
     margin-bottom: 0rem;
   }
 }
-.p-2 {
-  width: 100%;
-  height: auto; /* Ensure it adapts based on content or set a fixed height */
-  box-sizing: border-box; /* Ensure padding is included in the width calculation */
-}
-
 img.img-nutmeg {
   border-radius: 8px;
   border: 1px solid rgba(72, 124, 137, 0.5);
@@ -13018,16 +13012,6 @@ img.img-nutmeg {
   padding: 0; /* Remove any unwanted padding */
 }
 
-@media (min-width: 576px) {
-  img.img-nutmeg {
-    width: 200px; /* Ensure full width on larger screens */
-  }
-  .p-2 {
-    width: auto;
-    height: auto;
-    box-sizing: initial;
-  }
-}
 #problem-container, #impact-container {
   background-color: #487c89;
   border-radius: 16px;
